Node groups from assets cannot be refreshed automatically #98328

Closed
opened 2022-05-23 05:49:48 +02:00 by Leroy · 6 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41

Blender Version
Broken: version: 3.2.0 Beta, branch: master, commit date: 2022-05-22 19:10, hash: 84e55e3dc2
Worked: (newest version of Blender that worked as expected)

Short description of error
I made a simple file and as you can see, node groups from assets cannot be refreshed automatically.
You can refresh once by pressing alt+shift+LMB, or by reconnecting the node.
When you create a Scene Time node, the refresh seems to be normal.

thanks

Exact steps for others to reproduce the error
rotate_cube.mp4
Rotate Cube.blend

[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41 **Blender Version** Broken: version: 3.2.0 Beta, branch: master, commit date: 2022-05-22 19:10, hash: `84e55e3dc2` Worked: (newest version of Blender that worked as expected) **Short description of error** I made a simple file and as you can see, node groups from assets cannot be refreshed automatically. You can refresh once by pressing alt+shift+LMB, or by reconnecting the node. When you create a Scene Time node, the refresh seems to be normal. thanks **Exact steps for others to reproduce the error** [rotate_cube.mp4](https://archive.blender.org/developer/F13099284/rotate_cube.mp4) [Rotate Cube.blend](https://archive.blender.org/developer/F13099287/Rotate_Cube.blend) [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @Leroy-Xie

Added subscriber: @Leroy-Xie
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Note the same is totally fine when adding the group via the Add menu.
Somewhere the DEG update (same as bb0da7dbbd) is missing I assume.

Note the same is totally fine when adding the group via the `Add` menu. Somewhere the DEG update (same as bb0da7dbbd) is missing I assume.

This issue was referenced by 2ea6a0dd4d

This issue was referenced by 2ea6a0dd4d8e93012fde357f745691095a047123
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-05-24 10:06:05 +02:00
Bastien Montagne added this to the Pipeline, Assets & IO project 2023-02-09 15:40:48 +01:00
Bastien Montagne removed this from the Pipeline, Assets & IO project 2023-02-10 12:49:29 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98328
No description provided.