Fix T98328: missing depsgraph update after adding node group

Adding node groups can change depsgraph relations, so the depsgraph
has to be rebuild.